main.cppresult.txt
In file included from cur.cpp:13:0:
kudlaev/main.cpp: In member function 'void MyList<T>::insert(int, T)':
kudlaev/main.cpp:183:4: error: expected ';' before 'tmp'
    tmp = tmp->next;
    ^
./check.sh: line 24: ./a.out: No such file or directory
